--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         }
     ],
     "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "ebussola\\ihair\\": "src/"
+        }
+    },
     "require": {
         "php": "~5.5",
         "slim/slim": "~2.4",
@@ -14,5 +19,8 @@
         "twig/twig": "~1.15",
 
         "joshtronic/php-googleplaces": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7"
     }
 }
