--- a/web/bower.json
+++ b/web/bower.json
@@ -1,13 +1,14 @@
 {
-    "name": "ihair",
-    "private": true,
-    "dependencies": {
-        "modernizr": "~2.6.2",
-        "jquery": "~1.11.0",
-        "angular": "~1.2.16"
-    },
-    "devDependencies": {
-        "jasmine": "~2.0.0",
-        "angular-mocks": "~1.2.16"
-    }
+  "name": "ihair",
+  "private": true,
+  "dependencies": {
+    "modernizr": "~2.6.2",
+    "jquery": "~1.11.0",
+    "angular": "~1.2.16",
+    "bootstrap": "~3.1.1"
+  },
+  "devDependencies": {
+    "jasmine": "~2.0.0",
+    "angular-mocks": "~1.2.16"
+  }
 }
