--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
+    },
+    "extra": {
+        "heroku": {
+            "document-root": "web"
+        }
     }
 }
