--- a/web/bower.json
+++ b/web/bower.json
@@ -6,7 +6,8 @@
     "jquery": "~1.11.0",
     "angular": "~1.2.16",
     "bootstrap": "~3.1.1",
-    "angular-google-maps": "~1.0.18"
+    "angular-google-maps": "~1.0.18",
+    "angular-bootstrap": "~0.11.0"
   },
   "devDependencies": {
     "jasmine": "~2.0.0",
