--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "slim/views": "~0.1",
         "twig/twig": "~1.15",
 
-        "joshtronic/php-googleplaces": "dev-master"
+        "joshtronic/php-googleplaces": "dev-master",
+        "jackalope/jackalope-doctrine-dbal": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
