--- a/test/parameters.php.dist
+++ b/test/parameters.php.dist
@@ -7,5 +7,13 @@
  */
 
 return [
-    'google-api-key' => ''
+    'google-api-key' => '',
+
+      'db' => [
+          'driver' => '',
+          'user' => '',
+          'password' => '',
+          'dbname' => '',
+          'host' => ''
+      ]
 ];
