implemented Pusher to stream the salons as soon as it is ready (WebSocket)

--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,13 @@
         "rollbar/rollbar": "~0.8",
 
         "joshtronic/php-googleplaces": "dev-master",
-        "jackalope/jackalope-doctrine-dbal": "~1.1"
+        "jackalope/jackalope-doctrine-dbal": "~1.1",
+
+        "pusher/pusher-php-server": "~2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~3.7",
+        "moriony/php-zmq-stubs": "dev-master"
     },
     "extra": {
         "heroku": {
